syntax = "proto3";

package forescout.domainconverter;

option java_package = "com.forescout.proto.domainconverter.test.proto";
option java_multiple_files = true;
option java_outer_classname = "ConverterProto";

message PrimitivesProto {
    int32 intValue = 1;
    int64 longValue = 2;
    float floatValue = 3;
    double doubleValue = 4;
    bool booleanValue = 5;
}

message SimpleContainerProto {
	string strValue = 1;
  PrimitivesProto primitives = 2;
}

message PrimitiveListProto {
    repeated int32 listInt = 1;
}

message MessageListProto {
    repeated PrimitivesProto messageList = 1;
}
